--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'net.dv8tion:JDA:5.0.0-alpha.11'
     compileOnly 'org.projectlombok:lombok:1.18.24'
     implementation 'org.json:json:20220320'
+    implementation 'mysql:mysql-connector-java:8.0.29'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
